--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     
 </head>
 <body>
@@ -18,6 +19,20 @@
             <a class="header--div--img" href="#">
                 <img class="nav--log" src="https://i.ibb.co/fMNfjqy/HRWHITE.png" alt="HRLOG">
             </a >
+            <button class="abrir-menu"><i class="bi bi-list" class="menu--icon"></i></button>
+            <div class="menu-hamburguesa"> 
+                <button class="cerrar-menu"><i class="bi bi-x" class="x--icon"></i></button>
+                <ul class="menu-hamburguesa--links">
+                    <li class="ul--li"><a href="#SPONSORS">SPONSORS</a></li>
+                    <li class="ul--li"><a href="#PROJECTS">PROJECTS</a></li>
+                    <li class="ul--li"><a href="#CONTACT">CONTACT</a></li>
+                </ul>
+                <ul class="menu-hamburguesa--redes">
+                    <li><a href=""><i class="bi bi-instagram"></i></a></li>
+                    <li><a href=""><i class="bi bi-whatsapp"></i></a></li>
+                    <li><a href=""><i class="bi bi-facebook"></i></a></li>
+                </ul>
+            </div>
             <ul class="nav--ul">
                 <li class="ul--li"><a href="#SPONSORS">SPONSORS</a></li>
                 <li class="ul--li"><a href="#PROJECTS">PROJECTS</a></li>
@@ -27,5 +42,6 @@
     </header>
     <main class="main"></main>
     <footer class="footer"></footer>
+    <script src="js/menu.js"></script>
 </body>
 </html>
